[tool.poetry]
name = "pysimplesoap"
version = "0.1.0"
description = "Python Simple SOAP Library"
authors = ["Mariano Reingart <reingart@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
